Fixes, proper setings button, sidebar moved to left
- Fixed the another wonky behaviour of draging a dial: mouseup event doesn't fire if the click is fast (WTF)
- Settings button received overhaul, now looks like a settings button
- Moved the settings sidebar to the left, as it doesn't cover the scrollbar there. This migh not be true for RTL languages, but that is a thought for the future
- Cleanups of some remaining debugging stuff

--- a/speed-dial-app/src/components/configuration-container/ConfigurationContainer.css
+++ b/speed-dial-app/src/components/configuration-container/ConfigurationContainer.css
@@ -3,7 +3,7 @@
     width: 20rem;
     position: absolute;
     top: 0;
-    right: -20rem;
+    left: -20rem;
     background-color: transparent;
     z-index: 10000;
     transition: transform 0.25s cubic-bezier(.07, .95, 0, 1);
@@ -11,5 +11,5 @@
 }
 
 .configuration-sidebar.sidebar-open {
-    transform: translateZ(0) translateX(-20rem);
+    transform: translateZ(0) translateX(20rem);
 }
