--- a/speed-dial-app/src/components/speed-dial-container/SpeedDialContainer.css
+++ b/speed-dial-app/src/components/speed-dial-container/SpeedDialContainer.css
@@ -10,7 +10,7 @@
 
 .dial-container-top {
     width: 100%;
-    min-height: 50px;
+    min-height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
